objects/Energy_Quote_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>ANZ_Item_Id__c</fullName>
        <label>ANZ Item Id</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_price__c</fullName>
        <formula>UnitPrice__c * Quantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Catalog_Number__c</fullName>
        <label>Catalog Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Compare_Costing__c</fullName>
        <formula>IF(( Sold_Price__c &gt; RSM_Price__c &amp;&amp; RSM_Price__c != 0),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Compare Costing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Competitor_Part__c</fullName>
        <label>Competitor Part</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Origin__c</fullName>
        <label>Country of Origin</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Part_Number1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Part Number</label>
        <referenceTo>Customer_Part_Number__c</referenceTo>
        <relationshipLabel>Energy Quote Line Items</relationshipLabel>
        <relationshipName>Energy_Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Part_Number__c</fullName>
        <description>This field contains the customer part number.</description>
        <label>Customer Part Number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_Work_Weeks__c</fullName>
        <formula>Opportunity_Part__r.Lead_Time__c / 5</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Deliver Work Weeks</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Line Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Energy_Quote_Name__c</fullName>
        <label>Energy Quote Name</label>
        <referenceTo>Energy_Quote__c</referenceTo>
        <relationshipLabel>Energy Quote Line Items</relationshipLabel>
        <relationshipName>Energy_Quote_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GPL_Code__c</fullName>
        <formula>Product_Hierarchy__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPL Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPL_Description__c</fullName>
        <formula>Product_Hierarchy__r.GPL_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPL Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <description>Lead time in days</description>
        <inlineHelpText>Lead time in days</inlineHelpText>
        <label>Lead Time</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LineNumber__c</fullName>
        <label>Line Item Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ListPrice__c</fullName>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Max_Qty_in_Standard_lead_time__c</fullName>
        <label>Max Qty in Standard lead time</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Qty_w_in_Std_Lead_Time__c</fullName>
        <formula>Product2__r.Max_Qty_w_in_Std_Lead_Time__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Max Qty w/in Std Lead Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>1750</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NDR_Delivery_Unit__c</fullName>
        <label>Delivery Unit</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_Minimum_Delivery_Quantity__c</fullName>
        <label>Minimum Delivery Quantity</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_Minimum_Order_Quantity__c</fullName>
        <label>Minimum Order Quantity</label>
        <precision>17</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NDR_Unit_Package_Type__c</fullName>
        <label>Unit Package Type</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity Part</label>
        <referenceTo>Opportunity_Part__c</referenceTo>
        <relationshipLabel>Energy Quote Line Items</relationshipLabel>
        <relationshipName>Energy_Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part_Number</label>
        <referenceTo>Part__c</referenceTo>
        <relationshipLabel>Energy Quote Line Items</relationshipLabel>
        <relationshipName>Energy_Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Past_RSQ__c</fullName>
        <description>The referenced quote&apos;s number if this part is added from another quote</description>
        <label>Past RSQ #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List__c</fullName>
        <label>Price List</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Pack_Quantity__c</fullName>
        <label>Primary Pack Quantity</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Energy Quote Line Items</relationshipLabel>
        <relationshipName>Energy_Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductCode__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Hierarchy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Hierarchy</label>
        <referenceTo>Product_Hierarchy__c</referenceTo>
        <relationshipLabel>Energy Quote Line Items</relationshipLabel>
        <relationshipName>Energy_Quote_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <formula>TEXT(Product2__r.Product_Line_Desc__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_List_Price__c</fullName>
        <label>Product List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>QN__c</fullName>
        <label>QN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qad_Product_Number__c</fullName>
        <description>Previous: Product2__r.Name</description>
        <formula>Part__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qad Product Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <formula>if (isBlank( Past_RSQ__c ), Energy_Quote_Name__r.Quote_Number__c , Past_RSQ__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RSM_Price__c</fullName>
        <formula>Product2__r.RSM_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RSM Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Seq_No__c</fullName>
        <label>Seq No</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceDate__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sold_Price__c</fullName>
        <label>Quote Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Cost__c</fullName>
        <formula>Product2__r.Standard__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Standard Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Standard_Price__c</fullName>
        <label>Standard Cost</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Std_Margin__c</fullName>
        <formula>IF(Sold_Price__c &gt; 0,(( Sold_Price__c  -    Standard_Cost__c  )/Sold_Price__c),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Std Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TotalPrice__c</fullName>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UnitPrice__c</fullName>
        <label>Sales Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>temp_margin__c</fullName>
        <formula>Std_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>temp margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>temp_standard_price__c</fullName>
        <formula>Standard_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>temp standard price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Energy Quote Line Item</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Energy Quote Line Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Energy Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Modify_the_record</fullName>
        <active>true</active>
        <description>you can&apos;t add line items once the status is approved</description>
        <errorConditionFormula>text( Energy_Quote_Name__r.Approval_Status__c  ) = &apos;Presented&apos;</errorConditionFormula>
        <errorMessage>You cannot edit the Line Item once the record got submitted</errorMessage>
    </validationRules>
</CustomObject>